fixed the images having a gap

--- a/static/css/graph.css
+++ b/static/css/graph.css
@@ -15,6 +15,10 @@ font-family: 'QuicksandBold';
 body {
 	width: 620px;
 }
+img
+{
+	display: block;
+}
 table, th, td, tr, img
 {
 	border: 0;
@@ -25,6 +29,7 @@ table, th, td, tr, img
 table, th, td, tr
 {
 	border-collapse: collapse;
+	border-spacing: 0;
 }
 #date, #time, #obslabel, #obsunits , #fraction{
 	color: gray;
